--- a/styles/general.css
+++ b/styles/general.css
@@ -1,14 +1,43 @@
-p {
-  margin-top: 0;
-  margin-bottom: 0;
+/* general.css */
+.searchbar {
+  max-width: 300px;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-body {
-  /* This style below will be inherited */
-  font-family: Roboto, Arial;
-  margin: 0;
-  padding-top: 80px;
-  padding-left: 96px;
-  padding-right: 24px;
-  background-color: rgb(248, 248, 248);
+.searchbar__input {
+  width: 100%;
+  box-sizing: border-box;
+  padding: 10px;
+  outline: none;
+  border: 1px solid #182b27;
+  border-radius: 5px 0 0 5px;
+  background: #F4FAF9;
+  transition: background 0.25s, box-shadow 0.25s;
+}
+
+.searchbar__input:focus {
+  background: white;
+  box-shadow: 0 0 2px #8CC6BA;
+}
+
+.searchbar__input::placeholder {
+  color: #8CC6BA;
+}
+
+.searchbar__button {
+  width: 40px;
+  background: #009879;
+  color: #ffffff;
+  outline: none;
+  border: none;
+  border-radius: 0 5px 5px 0;
+  cursor: pointer;
+  user-select: none;
+}
+
+.searchbar__button:active {
+  box-shadow: inset 0 0 30px rgba(0, 0, 0, 0.25);
 }
