--- a/styles/background.css
+++ b/styles/background.css
@@ -1,10 +1,27 @@
 /* background.css */
+
+/* Container for search bar, button, and shortcut icons */
+.search-container {
+  max-width: 300px;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh; /* Full viewport height */
+}
+
+/* Body styles, including background image and positioning */
 body {
-  background: url('../channel-pictures/chrome_wallpaper.jpg') center/cover no-repeat;
+  background: url('../channel-pictures/chrome_wallpaper.jpg');
+  background-position: right bottom;
+  background-size: cover; /* Ensures the background image covers the entire viewport */
+  background-repeat: no-repeat; /* Prevents the background image from repeating */
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 100vh; /* Ensure the body takes up the full viewport height */
 }
